Fix issue with drink card not showing alt ingredients

--- a/src/components/ui/IngredientsPage/IngredientsSection/IngredientsSection.module.scss
+++ b/src/components/ui/IngredientsPage/IngredientsSection/IngredientsSection.module.scss
@@ -9,17 +9,15 @@
     header {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
         gap: 10px;
         border: 2px solid white;
         border-radius: 10px;
-        padding: 10px 10px;
+        padding: 5px;
         background: none;
         cursor: pointer;
-        width: auto;
         max-width: 500px;
-        line-height: 40px;
 
         h2 {
             color: white;
